# ARGoS3-NEAT

./: .gitignore  CMakeLists.txt  License  README.md
experiment-files/: habAggregation.argos  habDecision.argos  habRendezvous.argos
experiment-files/stop/: habStop.argos
experiments/adaptation/: adp-fr-mtc.argos  adp-fr-trn.argos  adp-st-mtc.argos  adp-st-trn.argos  adp-syn-mtc.argos  adp-syn-trn.argos  time.sh
experiments/chocolate/: chocolate_aac_visu.xml  chocolate_cfa_visu.xml  chocolate_lcn_visu.xml  chocolate_sca_visu.xml  chocolate_spc_visu.xml
experiments/example/: example_aggregation.xml  example_aggregation_visu.xml
experiments/mate/: neat_apc_visu.xml  neat_cc_visu.xml  neat_nc_visu.xml
experiments/sequence/: gen_last_1_champ  sequence.argos
experiments/tuttifrutti/: gen_last_1_champ  tutti-psr-ag.argos  tutti-psr-fr.argos  tutti-psr-st.argos  tuttiAggregation.argos  tuttiForaging.argos  tuttiStop.argos
loop-functions/: CMakeLists.txt
loop-functions/adaptation/: CMakeLists.txt  ForagMtcLoopFunc.cpp  ForagMtcLoopFunc.h  ForagTrnLoopFunc.cpp  ForagTrnLoopFunc.h  StopMtcLoopFunc.cpp  StopMtcLoopFunc.h  StopTrnLoopFunc.cpp  StopTrnLoopFunc.h  SynMtcLoopFunc.cpp  SynMtcLoopFunc.h  SynTrnLoopFunc.cpp  SynTrnLoopFunc.h
loop-functions/chocolate/: CMakeLists.txt
loop-functions/chocolate/AAC/: CMakeLists.txt  ChocolateAACLoopFunc.cpp  ChocolateAACLoopFunc.h
loop-functions/chocolate/CFA/: CMakeLists.txt  ChocolateCFALoopFunc.cpp  ChocolateCFALoopFunc.h
loop-functions/chocolate/LCN/: CMakeLists.txt  ChocolateLCNLoopFunc.cpp  ChocolateLCNLoopFunc.h
loop-functions/chocolate/SCA/: CMakeLists.txt  ChocolateSCALoopFunc.cpp  ChocolateSCALoopFunc.h
loop-functions/chocolate/SPC/: CMakeLists.txt  ChocolateSPCLoopFunc.cpp  ChocolateSPCLoopFunc.h
loop-functions/colors/: CMakeLists.txt  ColorsLoopFunc.cpp  ColorsLoopFunc.h  ColorsStopLoopFunc.cpp  ColorsStopLoopFunc.h  ColorsTestLoopFunc.cpp  ColorsTestLoopFunc.h
loop-functions/example/: CMakeLists.txt  ExampleAggregationLoopFunc.cpp  ExampleAggregationLoopFunc.h
loop-functions/foraging/: CMakeLists.txt  ForagingTwoSpotsLoopFunc.cpp  ForagingTwoSpotsLoopFunc.h
loop-functions/icra/: CMakeLists.txt  IcraAggClasLoopFunc.cpp  IcraAggClasLoopFunc.h  IcraAggInaLoopFunc.cpp  IcraAggInaLoopFunc.h  IcraAggInbLoopFunc.cpp  IcraAggInbLoopFunc.h  IcraAggLoopFunc.cpp  IcraAggLoopFunc.h  IcraDesClasLoopFunc.cpp  IcraDesClasLoopFunc.h  IcraDesInaLoopFunc.cpp  IcraDesInaLoopFunc.h  IcraDesInbLoopFunc.cpp  IcraDesInbLoopFunc.h  IcraDesLoopFunc.cpp  IcraDesLoopFunc.h  IcraStopLoopFunc.cpp  IcraStopLoopFunc.h
loop-functions/piecewise/: CMakeLists.txt  PwLoopFunc.cpp  PwLoopFunc.h
loop-functions/sequence/: CMakeLists.txt  SeqLoopFunc.cpp  SeqLoopFunc.h
loop-functions/tuttifrutti/: CMakeLists.txt  TuttiAgLoopFunc.cpp  TuttiAgLoopFunc.h  TuttiAggLoopFunc.h  TuttiFrLoopFunc.cpp  TuttiFrLoopFunc.h  TuttiStLoopFunc.cpp  TuttiStLoopFunc.h
misc/: paralell_run_mpi.py
misc/config/: aac-trial.xml  aac.xml  cfa-trial.xml  cfa.xml  genome_aac  genome_aac_old  (+13 more)
misc/old_loop_functions/: CMakeLists.txt
misc/old_loop_functions/aac/: CEpuckAACLoopFunction.cpp  CEpuckAACLoopFunction.h  CMakeLists.txt
misc/old_loop_functions/cfa/: CEpuckCFALoopFunction.cpp  CEpuckCFALoopFunction.h  CMakeLists.txt
misc/old_loop_functions/lcn/: CEpuckLCNLoopFunction.cpp  CEpuckLCNLoopFunction.h  CMakeLists.txt
misc/old_loop_functions/other/: CMakeLists.txt  aggregation_loop_function.cpp  aggregation_loop_function.h  chess_loop_function.cpp  chess_loop_function.h  goToLight_loop_function.cpp  goToLight_loop_function.h  obstacleAvoidance_loop_function.cpp  obstacleAvoidance_loop_function.h
misc/old_loop_functions/sca/: CEpuckSCALoopFunction.cpp  CEpuckSCALoopFunction.h  CMakeLists.txt
misc/old_loop_functions/spc/: CEpuckSPCLoopFunction.cpp  CEpuckSPCLoopFunction.h  CMakeLists.txt
params/: evostickParams.ne  evostickParamsOneByOne100k.ne  evostickParamsOneByOne10k.ne  evostickParams_40k_post_eval.ne  neatParams.ne
src/: CMakeLists.txt  NEATController.cpp  NEATController.h
src/ARGoS3_NEAT/: CMakeLists.txt  package.xml
src/ARGoS3_NEAT/src/: CMakeLists.txt  NEATController.cpp  NEATController.h
src/ARGoS3_NEAT/src/NEAT/: neat.cpp  neat.h  network.cpp  network.h  population.cpp  population.h  species.cpp
src/ARGoS3_NEAT/src/NEAT/Info/: experiments.h  neatmain.cpp  neatmain.h
src/ARGoS3_NEAT/src/controllers/: NeuralNetworkRM1Dot2.cpp
src/ARGoS3_NEAT/src/program/: README  evolution-sequential.cpp  scheduler.cpp
src/NEAT/: CMakeLists.txt  experiments.cpp  experiments.h  gene.cpp  gene.h  genome.cpp  genome.h  neat.cpp  nnode.cpp  nnode.h  organism.cpp  organism.h  population.cpp  species.cpp  trait.cpp  trait.h
src/cmake/: ARGoSBuildChecks.cmake  ARGoSBuildOptions.cmake  ARGoSPackaging.cmake  TargetEPuck.cmake  TargetLocalEPuck.cmake
src/controllers/: CMakeLists.txt  NeuralNetworkRM1Dot1.cpp  NeuralNetworkRM1Dot1.h  NeuralNetworkRM1Dot1Binary.cpp  NeuralNetworkRM1Dot1Binary.h  NeuralNetworkRM1Dot2.cpp  NeuralNetworkRM1Dot2.h  NeuralNetworkRM1Dot2Binary.cpp  NeuralNetworkRM1Dot2Binary.h  NeuralNetworkRM3Dot0.cpp  NeuralNetworkRM3Dot0.h  NeuralNetworkRM3Dot1.cpp  NeuralNetworkRM3Dot1.h  NeuralNetworkRM4Dot0.cpp  NeuralNetworkRM4Dot0.h  TMaze.cpp  TMaze.h  TestController.cpp  TestController.h  VectorialEvostick.cpp  VectorialEvostick.h
src/controllers/epuck_nn/: CMakeLists.txt  epuck_nn_controller.cpp  epuck_nn_controller.h  epuck_nn_controller23.cpp  epuck_nn_controller23.h
src/genome_parser/: CMakeLists.txt  parserGenome.cpp  parserGenome23.cpp
src/loop-functions/: CMakeLists.txt  neat_loop_function.cpp  neat_loop_function.h
src/program/: CMakeLists.txt  Evostick.cpp  README  evolution-mmts.cpp  evolution-sequential.cpp  evolution.cpp  launch.cpp  main-sequential.cpp  main.cpp  prog.cpp  scheduler-mmts.cpp  scheduler.cpp
startgen/: evocolorstartgenesRM30  evocolorstartgenesRM41  evostickstartgenes  evostickstartgenes23  evostickstartgenesRM11  evostickstartgenesRM12  evostickstartgenesRM31  neatstartgenes  neatstartgenes23
(+72 files in other folders)
